--- a/index.html
+++ b/index.html
@@ -20,7 +20,53 @@
     <script src="lib/ckeditor/ckeditor.js"></script>
     <script src="lib/angular-ckeditor/angular-ckeditor.js"></script>
     <script src="build/mm.bundle.js"></script>
-    <style></style> <!-- Empty style to make easier to test styles using Inspector. -->
+    <style>.bar-content {
+   background-color: #5069A1;
+ }
+.bar-header {
+  background-color:#5069A1;
+}
+ion-side-menu li .item{
+background-color:#313848;
+border-color:#4F5865;
+color:#BCC3CF;
+}
+ion-side-menu li .item{
+border-color:#4F5865;
+}
+ion-side-menu li .item.item-divider{
+background-color:#3E4755;
+}
+.ion-ionic{
+color:orange;
+}
+.ion-home{
+color:blue;
+}
+.ion-bell{
+color:yellow;
+}
+.ion-chatbox{
+color:green;
+}
+.ion-calender{
+color:white;
+}
+.ion-folder{
+color:purple;
+}
+.ion-earth{
+color:maroon;
+}
+.ion-help-buoy{
+color:orange;
+}
+.ion-gear-b{
+color:dimgray;
+}
+.ion-log-out{
+color:red;
+}</style> <!-- Empty style to make easier to test styles using Inspector. -->
   </head>
   <body ng-app="mm">
     <ion-nav-view></ion-nav-view>
